Fix broken onClick function

--- a/css/main.css
+++ b/css/main.css
@@ -68,13 +68,13 @@ hr {
     width: 100%;
 }
 
-.btn-mute {
+#mute-all, #unmute-all {
     padding: 8px 0;
     width: 48%;
     font-size: 14px;
     margin-bottom: 0;
 }
 
-.btn-mute:last-child {
+#unmute-all {
     float: right;
 }
